--- a/tex/related_work.tex
+++ b/tex/related_work.tex
@@ -101,7 +101,7 @@ This allows the agent to adapt better to the changed conditions within the envir
 Besides optimising the weights, self-organisation has also been used to change the learning rule.
 
 The method ``evolve and merge`` \sidecite{Pedersen_Risi_2021} uses the so called ``ABCD'' Hebbian learning rule which updates the weights as follows:
-\begin{align}\eqlbl{McCulloch_Pitts_act}
+\begin{align}\eqlbl{abcd_hebb_rule_risi}
 	\Delta w_{ij} = \alpha (A a_i a_j + B a_i + C a_j + D)
 \end{align}%
 
